[package]
name = "rosu-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
rosu-v2 = { git = "https://github.com/MaxOhn/rosu-v2", branch = "lazer", features = ["serialize"] }
rosu-pp = { git = "https://github.com/MaxOhn/rosu-pp", branch = "main" }
tokio-tungstenite = "0.24.0"
tokio = { version = "1.41.1", features = ["rt-multi-thread"] }
serde = { version = "1.0.215" }
serde_json = "1.0.133"
hyper = { version = "1.5.1", features = ["server", "http1"] }
dotenvy = "0.15.7"
toml = "0.8.19"
futures-util = "0.3.31"
hyper-util = {version = "0.1.10", features = ["tokio"]}
futures-lite = "2.5.0"
eyre = "0.6.12"
async-io = "2.4.0"
http-body-util = "0.1.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
