[package]
name = "rosu-tracker"
version = "0.1.0"
edition = "2021"

[features]
default = ["gui"]
gui = []

[dependencies]
rosu-v2 = { git = "https://github.com/Chiffario/rosu-v2", branch = "lazer", features = ["serialize"] }
rosu-pp = { git = "https://github.com/MaxOhn/rosu-pp", branch = "main" }
tokio-tungstenite = "0.24.0"
tokio = { version = "1.41.1", features = ["rt-multi-thread"] }
serde = { version = "1.0.215" }
serde_json = "1.0.133"
hyper = { version = "1.5.1", features = ["server", "http1"] }
dotenvy = "0.15.7"
toml = "0.8.19"
futures-util = "0.3.31"
hyper-util = {version = "0.1.10", features = ["tokio"]}
futures-lite = "2.5.0"
eyre = "0.6.12"
async-io = "2.4.0"
http-body-util = "0.1.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
i18n-embed-fl = "0.9.2"
open = "5.3.0"
rust-embed = "8.5.0"
constcat = "0.5.1"
directories = "5.0.*"
[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
# See https://github.com/pop-os/libcosmic/blob/master/Cargo.toml for available features.
features = [
    # Accessibility support
    "a11y",
    # Uses cosmic-settings-daemon to watch for config file changes
    "dbus-config",
    # Support creating additional application windows.
    "multi-window",
    # On app startup, focuses an existing instance if the app is already open
    "single-instance",
    # Uses tokio as the executor for the runtime
    "tokio",
    # Windowing support for X11, Windows, Mac, & Redox
    "winit",
    # Add Wayland support to winit
    "wayland",
    # GPU-accelerated rendering
    "wgpu",
]
