[package]
name = "rosu-tracker"
version.workspace = true
edition.workspace = true

[features]
# default = ["cosmic"]
default = []
cosmic = []
iced = []

[dependencies]
clap = { workspace = true }
color-eyre = { workspace = true }
serde = { workspace = true }
rosu-v2 = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
server = { path = "../server" }
constants = { path = "../constants" }
types = { path = "../types" }
tracker-cosmic = { path = "../tracker-cosmic" }
[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
# See https://github.com/pop-os/libcosmic/blob/master/Cargo.toml for available features.
features = [
    # Accessibility support
    "a11y",
    # Uses cosmic-settings-daemon to watch for config file changes
    # "dbus-config",
    # Support creating additional application windows.
    # "multi-window",
    # On app startup, focuses an existing instance if the app is already open
    "single-instance",
    # Uses tokio as the executor for the runtime
    "tokio",
    # Windowing support for X11, Windows, Mac, & Redox
    "winit",
    # Add Wayland support to winit
    "wayland",
    # GPU-accelerated rendering
    "wgpu",
]
tokio = { workspace = true }

[[bin]]
name = "rosu-tracker"
path = "main.rs"
