[package]
name = "server"
version.workspace = true
edition.workspace = true

[dependencies]
futures-lite = { workspace = true }
futures-util = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rosu-v2 = { workspace = true }
color-eyre = { workspace = true }
constants = { path = "../constants" }
types = { path = "../types" }
