[package]
name = "tracker-cosmic"
version.workspace = true
edition.workspace = true

[dependencies]
serde = "1.0.219"
serde_json = { workspace = true }
rosu-v2 = { workspace = true }
image = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
color-eyre = { workspace = true }
constants = { path = "../constants", features = ["gui"] }
types = { path = "../types" }
utils = { path = "../utils" }
server = { path = "../server" }
libcosmic = { workspace = true }
bytes = "1.10.1"
