[package]
name = "utils"
version.workspace = true
edition.workspace = true

[dependencies]
hyper = { workspace = true }
hyper-util = { workspace = true }
tracing = { workspace = true }
color-eyre = { workspace = true }
futures-util = { workspace = true }
http-body-util = { workspace = true }
image = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true}
